// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> set as disabled matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular y-button__state-disabled"
  classNames={Object {}}
  disabled={true}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular y-button__state-loading"
  classNames={Object {}}
  disabled={true}
  split={false}
  styles={Object {}}
>
  <Block
    className="y-button--content__hidden"
    textSize="mediumSub"
  >
    Click Me
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="light"
      hideText={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with additional className matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular TEST_CLASSNAME"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with aria label matches its snapshot 1`] = `
<BaseButton
  ariaLabel="Aria description"
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with default options matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with fullWidth matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular y-button__fullWidth"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    <span
      className="y-button--icon-wrapper-left"
    >
      <Icon
        className="y-button--icon"
        icon="add"
      />
    </span>
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with icon on the right matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
    <span
      className="y-button--icon-wrapper-right"
    >
      <Icon
        className="y-button--icon"
        icon="add"
      />
    </span>
  </Block>
</BaseButton>
`;

exports[`<Button /> with invalid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  disabled={false}
  href="#"
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-primary y-button__size-regular"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with primary color set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-primary y-button__size-regular y-button__state-loading"
  classNames={Object {}}
  disabled={true}
  split={false}
  styles={Object {}}
>
  <Block
    className="y-button--content__hidden"
    textSize="mediumSub"
  >
    Click Me
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="dark"
      hideText={true}
      size="small"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with small size matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-small"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="small"
  >
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with small size set as loading matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-small y-button__state-loading"
  classNames={Object {}}
  disabled={true}
  split={false}
  styles={Object {}}
>
  <Block
    className="y-button--content__hidden"
    textSize="small"
  >
    Click Me
  </Block>
  <span
    className="y-button--spinner"
  >
    <Spinner
      color="light"
      hideText={true}
      size="xSmall"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with small size with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-small"
  classNames={Object {}}
  disabled={false}
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="small"
  >
    <span
      className="y-button--icon-wrapper-left"
    >
      <Icon
        className="y-button--icon"
        icon="add"
      />
    </span>
    Click Me
  </Block>
</BaseButton>
`;

exports[`<Button /> with valid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  disabled={false}
  href="https://www.yammer.com"
  split={false}
  styles={Object {}}
>
  <Block
    className=""
    textSize="mediumSub"
  >
    Click Me
  </Block>
</BaseButton>
`;
